repaired services anim on mobile

--- a/main.css
+++ b/main.css
@@ -300,6 +300,13 @@
     .overlay h1 {
         font-size: 1.5em;
     }
+    .overlay:focus {
+        animation-name: overlays;
+        animation-duration: 0.6s;
+        animation-fill-mode: forwards;
+        -webkit-animation-timing-function: linear;
+        animation-timing-function: linear;
+    }
 }
 @media only screen and (max-width: 495px) {
     #pageName {
